--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
 }
 #navigation{
-    background-color: dodgerblue;
+    background-color: #3498db;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,7 +12,6 @@
 #navigation > ul{
     display: flex;
     margin-right: 50px;
-    gap: 50px;
     padding: 15px 0;
 }
 #navigation > ul > li{
@@ -22,8 +21,48 @@
     text-decoration: none;
     color: #fff;
     font-size: 28px;
+    border-right: 1px solid white;
+    padding: 15px  20px;
+    transition: .5s;
+}
+#navigation > ul > li > a:hover{
+    background-color: rgb(15, 53, 90);
+}
+#navigation > ul > li:first-child > a{
+    border-left: 1px solid #fff;
 }
 .logo > h2{
     color: #fff;
     margin-left: 50px;
+    font-size: 25px;
+}
+/* dropdown menu start*/
+.dropdownMenu {
+    background-color: dodgerblue;
+    text-align: center;
+    margin-top: 15px;
+    width: 150px;
+    position: absolute;
+    transition: 1s;
+    opacity: 0;
+    visibility: hidden;
+}
+.dropdownMenu > li{
+    list-style-type: none;
+    padding: 10px 0;
+    border-bottom: 1px solid #fff;
+}
+.dropdownMenu > li > a{
+    text-decoration: none;
+    color: #fff;
+}
+.dropdownMenu > li:first-child{
+    border-top: 1px solid #fff;
+}
+#navigation > ul > li:hover > .dropdownMenu {
+    opacity: 1; 
+    visibility: visible;
+}
+.dropdownMenu > li:hover{
+    background-color: #2980b9;
 }
