--- a/css/styles.css
+++ b/css/styles.css
@@ -74,3 +74,73 @@
 .dropdownMenu > li:hover{
     background-color: #2980b9;
 }
+
+/* Hero area code start here */
+#main-header {
+    text-align: center;
+    background-image: linear-gradient(rgb(0 0 0 / 46%), rgba(0, 0, 0, 0.281)), url(../img/web\ header.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 90vh;
+}
+.header-container{
+    padding-top: 100px;
+}
+.header-container h1 {
+    width: 700px;
+    background-color: rgba(27, 88, 148, 0.604);
+    margin: 20px auto;
+    font-size: 50px;
+    color: #fff;
+    padding: 40px 0;
+    border-radius: 5px;
+}
+.header-container button{
+    font-size: 22px;
+    padding: 15px 20px;
+    margin-top: 20px;
+    background-color: rgb(33, 104, 175);
+    border-radius: 10px;
+    border: 4px solid green;
+    cursor: pointer;
+    transition: .5s;
+    color: #fff;
+}
+.header-container button:hover{
+    background-color: rgba(0, 0, 0, 0.102);
+}
+.header-container h4{
+    font-size: 25px;
+    color: rgb(73, 73, 73);
+}
+.header-container h5{
+    font-size: 25px;
+    color: rgb(79, 79, 79);
+}
+.social-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  
+}
+.social-icon > a{
+    color: #fff;
+    text-decoration: none;
+    margin: 0 10px;
+}
+.social-icon > a > i{
+    width: 30px;
+    height: 30px;
+    font-size: 30px;
+    background-color: rgba(0, 128, 0, 0);
+    padding: 10px;
+    border-radius: 50%;
+    margin-top: 20px;
+    border: 2px solid #fff;
+    transition: .5s;
+}
+.social-icon > a > i:hover{
+    background-color: rgba(15, 203, 115, 0.751);
+    transform: rotate(360deg);
+}
