--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@
 #navigation > ul > li:first-child > a{
     border-left: 1px solid #fff;
 }
-.logo > h2{
+.logo > h1{
     color: #fff;
     margin-left: 50px;
     font-size: 25px;
@@ -143,4 +143,76 @@
 .social-icon > a > i:hover{
     background-color: rgba(15, 203, 115, 0.751);
     transform: rotate(360deg);
+}
+
+/* first ection code here */
+#first-section {
+    background-color: #e8e5e2;
+}
+#first-container{
+    display: flex;
+    width: 1000px;
+    margin: auto;
+    justify-content: space-between;
+    padding: 100px 0;
+}
+.card-design{
+    width: 300px;
+    text-align: center;
+    padding: 30px 10px;
+    transition: .5s;
+}
+.card-design:hover{
+    box-shadow: 3px 3px 10px gray;
+}
+.card-design > i{
+    font-size: 50px;
+}
+.card-design > h2{
+    margin: 15px 0;
+}
+.smart-area-title > h2{
+    font-size: 40px;
+    text-align: center;
+    position: relative;
+}
+.smart-area-title > h2::after {
+    content: "";
+    top: 50px;
+    left: 901px;
+    width: 100px;
+    height: 5px;
+    background-color: #7f4646;
+    position: absolute;
+}
+.smart-area{
+    display: flex;
+    width: 1000px;
+    margin: auto;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 0;
+}
+.smart-area-text{
+    width: 500px;
+}
+.smart-area-text > h2{
+    margin: 20px 0;
+}
+.smart-area-text  > h4{
+    color: #7f4646;
+}
+.smart-area-text > a{
+    text-decoration: none;
+    background-color: #7f4646;
+    color: white;
+    font-size: 20px;
+    padding: 10px 30px;
+    margin: 20px 0;
+    display: inline-block;
+    border-radius: 5px;
+    transition: .5s;
+}
+.smart-area-text > a:hover{
+    background-color: #4e2626;
 }
